prevents from showing up on mobile

--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -260,10 +260,8 @@ a.modal-insp:hover {
   border-left: 2px solid gray;
 }
 
-@media (max-width: 640px)
-{
-    #mySlider
-    {
-        display: none;
-    }
+@media (max-width: 640px) {
+  #lesson-sidebar {
+    display: none;
+  }
 }
